[gd_scene load_steps=12 format=2]

[ext_resource path="res://UI/Dialogue.gd" type="Script" id=1]
[ext_resource path="res://UI/DialogueBox.gd" type="Script" id=2]
[ext_resource path="res://UI/Name.gd" type="Script" id=3]
[ext_resource path="res://DialogueBoxNode.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/Verdana.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://UI/DialogueParser.gd" type="Script" id=6]
[ext_resource path="res://UI/Vendor.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=90]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=91]
size = 14
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=92]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=93]
size = 14
font_data = ExtResource( 5 )

[node name="UI" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueBox" type="Popup" parent="." groups=[
"UI",
]]
margin_right = 320.0
margin_bottom = 100.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueBoxNode" parent="DialogueBox" instance=ExtResource( 4 )]
patch_margin_left = 30
patch_margin_right = 30

[node name="NPCName" type="RichTextLabel" parent="DialogueBox"]
anchor_left = 0.039
anchor_top = 0.119
anchor_right = 0.039
anchor_bottom = 0.119
margin_left = -3.48
margin_top = -3.481
margin_right = 296.52
margin_bottom = 28.519
custom_fonts/normal_font = SubResource( 90 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialogue" type="Label" parent="DialogueBox"]
margin_left = 12.0
margin_top = 28.0
margin_right = 301.0
margin_bottom = 157.0
custom_fonts/font = SubResource( 91 )
autowrap = true
clip_text = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="DialogueBox"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
custom_fonts/normal_font = SubResource( 92 )

[node name="TextSpeed" type="Timer" parent="DialogueBox"]
wait_time = 0.01

[node name="DialogueParser" type="Control" parent="DialogueBox"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
text_file_path = "res://Dialogues/text.json"
repeat_file_path = "res://Dialogues/repeat.json"

[node name="Notification" type="Label" parent="DialogueBox"]
margin_left = -10.0
margin_top = 5.0
margin_right = 310.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 93 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vendor" parent="." instance=ExtResource( 7 )]
[connection signal="receivedInput" from="DialogueBox/Dialogue" to="DialogueBox" method="_on_Dialogue_receivedInput"]
[connection signal="timeout" from="DialogueBox/TextSpeed" to="DialogueBox/Dialogue" method="_on_Timer_timeout"]

[editable path="Vendor"]
